--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Green man game</title>
     <link rel="stylesheet" href="app.css" type="text/css" />
     <script src="/scripts/phaser.js"></script>
-    <script src="/scripts/app.js"></script>
+    <script src="/scripts/playGame.js"></script>
 </head>
 <body>
     <div id="content">
